Add tests for RxMicroTestExtensions