@@ -36,6 +36,11 @@
                 <configuration>
                     <argLine>
                         @{argLine}
+                        --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+                        --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+
+                        --add-opens rxmicro.test.junit/io.rxmicro.test.junit.internal=ALL-UNNAMED
+                        --add-opens rxmicro.test.junit/io.rxmicro.test.junit.internal=org.junit.platform.commons
                     </argLine>
                 </configuration>
             </plugin>
